# palacinke-lang

./: .gitignore  Cargo.toml
core/compiler/: Cargo.toml
core/compiler/src/: code.rs  errors.rs  lib.rs  loaders.rs  modules_table.rs  objects.rs  symbols_table.rs
core/lexer/: Cargo.toml
core/lexer/src/: lib.rs  tokens.rs
core/parser/: Cargo.toml
core/parser/src/: ast.rs  errors.rs  lib.rs
core/vm/: Cargo.toml
core/vm/src/: context.rs  errors.rs  executors.rs  frames.rs  lib.rs  stack.rs
examples/: fibonacci.pk  fizzbuzz.pk  hello_world.pk
palacinke/: Cargo.toml
palacinke/src/: errors.rs  lib.rs
palacinke/src/utils/: mod.rs
