[package]
name = "palacinke"
version = "0.0.2-dev.1"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke"
description = "Palacinke: the useless scripting lang"
license = "MIT"
authors = ["juanvillacortac@gmail.com"]

[[bin]]
name = "palacinke"
path = "src/bin/palacinke.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
pk_compiler = { version = "0.0.2-dev", path = "../core/compiler" }
pk_parser = { version = "0.0.2-dev", path = "../core/parser" }
pk_vm = { version = "0.0.2-dev", path = "../core/vm" }
platform-dirs = "0.3.0"
rustyline = "10.0.0"
