[package]
name = "pk_compiler"
version = "0.0.2-dev.0"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke-lang"
description = "The Palacinke lang bytecode compiler"
license = "MIT"
authors = ["juanvillacortac@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pk_parser = { version = "0.0.1-dev.0", path = "../parser" }
