[package]
name = "pk_lexer"
version = "0.0.2-dev.1"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke"
author = "juanvillacortac@gmail.com"
description = "The Palacinke lang lexer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
