[package]
name = "pk_lexer"
version = "0.0.5-dev"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke-lang"
description = "The Palacinke lang lexer"
license = "MIT"
authors = ["juanvillacortac@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
