[package]
name = "pk_parser"
version = "0.0.2-dev.1"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke"
author = "juanvillacortac@gmail.com"
description = "The Palacinke lang parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pk_lexer = { version = "0.0.2-dev", path = "../lexer" }
