[package]
name = "pk_parser"
version = "0.0.4-dev"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke-lang"
description = "The Palacinke lang parser"
license = "MIT"
authors = ["juanvillacortac@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pk_lexer = { version = "0.0.4-dev", path = "../lexer" }
