[package]
name = "pk_vm"
version = "0.0.2-dev.1"
edition = "2021"
repository = "https://github.com/juanvillacortac/palacinke-lang"
description = "The Palacinke lang bytecode virtual machine"
license = "MIT"
authors = ["juanvillacortac@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pk_compiler = { version = "0.0.2-dev.1", path = "../compiler" }
